<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ExplorerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/recent_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/hot_topic"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/alltopic_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/recent_topic"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/all_topic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/material_typography_body1"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_keyboard_arrow_right_blue_400_24dp" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topic_banner"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_marginBottom="20dp"
            android:nestedScrollingEnabled="false">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/hot_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/hot_category"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/allcategory_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/hot_category"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/all_category"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/material_typography_body1"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_keyboard_arrow_right_blue_400_24dp" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:id="@+id/guess_rec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/guess_rec"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/allreco_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/guess_rec"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/all_rec"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/material_typography_body1"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_keyboard_arrow_right_blue_400_24dp" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reco_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:nestedScrollingEnabled="false">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>


